--- a/angular/cmp-databinding-start/src/app/app.component.html
+++ b/angular/cmp-databinding-start/src/app/app.component.html
@@ -11,7 +11,7 @@
         [srvElement]="serverElement"
       >
       <p>
-        <strong *ngIf="serverElement.type === 'server'" style="color: red">{{ serverElement.content }}</strong>
+        <strong *ngIf="serverElement.type === 'server'" style="color: darkred">{{ serverElement.content }}</strong>
         <em *ngIf="serverElement.type === 'blueprint'">{{ serverElement.content }}</em>
       </p>
     </app-server-element>
